# wuwei

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: agent_framework_core_features.md  framework_flow.md  learning_framework_roadmap.md  long_term_memory_rag_plan.md  minimal_framework_evolution.md  react-runtime-next-step-code.md  react-runtime-refactor.md
examples/: README.md  agent_minimal.py  agent_session_minimal.py  agent_skill_minimal.py  full_flow.py  plan_agent_minimal.py  tool_executor_minimal.py  while_true_agent.py
examples/skills/code-review/: SKILL.md
examples/skills/code-review/scripts/: count_lines.py
examples/skills/release_checklist/: SKILL.md
examples/skills/release_checklist/scripts/: base_checklist.py
llm/: types.py
llm/adapters/: __init__.py  base.py  openai.py
tests/: test_api_simplification.py  test_builtin_tools.py  test_skill_integration.py
wuwei/: __init__.py
wuwei/agent/: __init__.py  agent.py  base.py  plan_agent.py  plan_runner.py  runner.py  session.py
wuwei/core/: __init__.py  agent.py  base.py  context.py  planner.py  task.py
wuwei/llm/: __init__.py  gateway.py  types.py
wuwei/llm/adapters/: base.py  openai.py
wuwei/memory/: __init__.py  context.py  context_compressor.py  context_window.py  storage.py  token_counter.py
wuwei/planning/: __init__.py  planner.py  task.py
wuwei/runtime/: __init__.py  agent_runner.py  console_hook.py  context_hook.py  hitl.py  hitl_hook.py  hooks.py  planner_executor_runner.py  skill_hook.py  storage_hook.py
wuwei/skill/: __init__.py  fs_provider.py  skill.py
wuwei/tools/: __init__.py  executor.py  registry.py  tool.py
wuwei/tools/builtin/: __init__.py  calc_tools.py  file_tools.py  git_tools.py  npm_tools.py  python_tools.py  skill_tools.py  time_tools.py
